results/SVCOMP/conversational/log-ExSymExe15-2024_03_11_05_31_44.txt
class Main {
  static int field;
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0;
  //@ ensures !\result ==> test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x == 13000;
  //@ ensures r == x + z && z == x - 3 - 4 ==> \result;
  //@ ensures r == x + z && z != x - 3 - 4 ==> !\result;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> test(13000, field, field2);
                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> test(13000, field, field2);
                                              ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures !\result ==> test(13000, field, field2);
                           ^
4 errors

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0;
  //@ ensures !\result ==> test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x == 13000;
  //@ ensures r == x + z && z == x - 3 - 4 ==> \result;
  //@ ensures r == x + z && z != x - 3 - 4 ==> !\result;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:9: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures !\result ==> test(13000, field, field2);
                           ^
1 error

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0;
  //@ ensures !\result ==> new Main().test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return new Main().test(x, field, field2);
  }
  
  //@ requires x == 13000;
  //@ ensures r == x + z && z == x - 3 - 4 ==> \result;
  //@ ensures r == x + z && z != x - 3 - 4 ==> !\result;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:9: error: Object allocation is not permitted in specification expressions
  //@ ensures !\result ==> new Main().test(13000, field, field2);
                           ^
1 error

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0;
  //@ ensures !\result ==> new Main().test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    Main inst = new Main();
    return inst.test(x, field, field2);
  }
  
  //@ requires x == 13000;
  //@ ensures r == x + z && z == x - 3 - 4 ==> \result;
  //@ ensures r == x + z && z != x - 3 - 4 ==> !\result;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:9: error: Object allocation is not permitted in specification expressions
  //@ ensures !\result ==> new Main().test(13000, field, field2);
                           ^
1 error

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0;
  //@ ensures !\result ==> test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return test(x, field, field2);
  }
  
  //@ requires x == 13000;
  //@ ensures r == x + z && z == x - 3 - 4 ==> \result;
  //@ ensures r == x + z && z != x - 3 - 4 ==> !\result;
  public static boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
